# docs/swagger/openapi.yaml
@@ -17,6 +17,26 @@ components:
       x-enum-varnames:
       - PrStatusOpen
       - PrStatusMerged
+    model.PullRequest:
+      properties:
+        assigned_reviewers:
+          items:
+            type: string
+          type: array
+          uniqueItems: false
+        author_id:
+          type: string
+        created_at:
+          type: string
+        merged_at:
+          type: string
+        pull_request_id:
+          type: string
+        pull_request_name:
+          type: string
+        status:
+          $ref: '#/components/schemas/model.PrStatus'
+      type: object
     model.PullRequestShort:
       properties:
         author_id:
@@ -26,7 +46,10 @@ components:
         pull_request_name:
           type: string
         status:
-          $ref: '#/components/schemas/model.PrStatus'
+          type: string
+          x-enum-varnames:
+          - PrStatusOpen
+          - PrStatusMerged
       type: object
     model.Team:
       properties:
@@ -66,6 +89,24 @@ components:
           type: string
         username:
           type: string
+      type: object
+    pull_requests.CreatePrRequest:
+      properties:
+        author_id:
+          type: string
+        pull_request_id:
+          type: string
+        pull_request_name:
+          type: string
+      required:
+      - author_id
+      - pull_request_id
+      - pull_request_name
+      type: object
+    pull_requests.PullRequestResponse:
+      properties:
+        pr:
+          $ref: '#/components/schemas/model.PullRequest'
       type: object
     teams.CreateUpdateTeamRequest:
       properties:
@@ -109,6 +150,39 @@ info:
   version: dev
 openapi: 3.0.1
 paths:
+  /pullRequest/create:
+    post:
+      description: Creates a new pull request with the given ID, name, and author
+        ID.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/pull_requests.CreatePrRequest'
+        description: Pull request creation data
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/pull_requests.PullRequestResponse'
+          description: Created
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/model.ErrorResponse'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/model.ErrorResponse'
+          description: Internal Server Error
+      summary: Create a new pull request
+      tags:
+      - PullRequests
   /team/add:
     post:
       description: Create a new team
