# internal/model/pull-request.go
@@ -3,6 +3,7 @@ package model
 import (
 	"time"
 
+	"github.com/mr1cloud/Avito-Reviewer/internal/model/types"
 	"github.com/mr1cloud/Avito-Reviewer/internal/validation"
 
 	"github.com/go-playground/validator/v10"
@@ -33,13 +34,13 @@ func ValidatePrStatus(fl validator.FieldLevel) bool {
 }
 
 type PullRequest struct {
-	PullRequestID     string     `json:"pull_request_id" db:"pull_request_id"`
-	PullRequestName   string     `json:"pull_request_name" db:"pull_request_name"`
-	AuthorID          string     `json:"author_id" db:"author_id"`
-	Status            PrStatus   `json:"status" db:"status"`
-	AssignedReviewers []string   `json:"assigned_reviewers" db:"assigned_reviewers"`
-	CreatedAt         time.Time  `json:"created_at" db:"created_at"`
-	MergedAt          *time.Time `json:"merged_at,omitempty" db:"merged_at"`
+	PullRequestID     string            `json:"pull_request_id" db:"pull_request_id"`
+	PullRequestName   string            `json:"pull_request_name" db:"pull_request_name"`
+	AuthorID          string            `json:"author_id" db:"author_id"`
+	Status            PrStatus          `json:"status" db:"status"`
+	AssignedReviewers types.StringSlice `json:"assigned_reviewers" db:"assigned_reviewers"`
+	CreatedAt         time.Time         `json:"created_at" db:"created_at"`
+	MergedAt          *time.Time        `json:"merged_at,omitempty" db:"merged_at"`
 }
 
 type PullRequestShort struct {
